# sokoban

./: .gitignore  .travis.yml  Cargo.toml  README.md  TODO.md  clippy.sh  package.sh
assets/images/: README.md
assets/levels/: AUTHORS  dimitri_and_yorick.lvl  extra.lvl  for_the_kids.lvl  mactommy_inventions.lvl  mas_sasquatch.lvl  microban.lvl  microban_1.lvl  microban_2.lvl  microban_3.lvl  microban_4.lvl  microban_5.lvl  original.lvl  sasquatch.lvl  sasquatch_1.lvl  sasquatch_10.lvl  sasquatch_11.lvl  sasquatch_12.lvl  sasquatch_2.lvl  sasquatch_3.lvl  sasquatch_4.lvl  sasquatch_5.lvl  sasquatch_6.lvl  sasquatch_7.lvl  sasquatch_8.lvl  sasquatch_9.lvl  sasquatch_iii.lvl  sasquatch_iv.lvl  simple_sokoban.lvl  still_more.lvl  test.lvl  test_2.slc  yoshios_autogenerated.lvl
examples/: pathfinding.rs
image-to-level/: Cargo.toml  README.md
image-to-level/src/: main.rs
image_to_level/: Cargo.toml
image_to_level/src/: main.rs
src/: cell.rs  collection.rs  command.rs  current_level.rs  direction.rs  event.rs  game.rs  level.rs  lib.rs  macros.rs  main.rs  move_.rs  position.rs  save.rs  sprite.rs  texture.rs  undo.rs  util.rs
src/backend/: collection.rs  direction.rs  level.rs  mod.rs  move_.rs  position.rs
src/current_level/: graph.rs  pathfinding.rs
src/gui/: font.rs  inputstate.rs  mod.rs  sprite.rs  text_objects.rs  texture.rs
src/level/: builder.rs  graph.rs  pathfinding.rs
src/save/: collection_state.rs  level_state.rs  mod.rs  solution.rs
tests/: level.rs
