[package]
authors = ["Colin Benner <colin@yzhs.de>"]
name = "sokoban"
version = "0.5.1"
edition = "2018"

[[bin]]
doc = false
name = "sokoban"
test = false

[dependencies]
glium = "0.22"
ansi_term = "0.11.0"
app_dirs = "1.2.1"
clap = "2.32.0"
colog = "0.1.1"
failure = "0.1.5"
find_folder = "0.3.0"
glium_text = "0.13.0"
image = "0.20.1"
lazy_static = "1.2.0"
log = "0.4.6"
natord = "1.0.9"
quick-xml = "0.13.1"
serde = "1.0.84"
serde_cbor = "0.9.0"
serde_derive = "1.0.84"
serde_json = "1.0.34"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.5"

[features]
default = []

[lib]
name = "sokoban_backend"
