[package]
authors = ["Colin Benner <colin@yzhs.de>"]
name = "sokoban"
version = "0.5.1"
edition = "2018"

[[bin]]
doc = false
name = "sokoban"
test = false

[dependencies]
glium = "0.22"
ansi_term = "0.12.1"
directories = "4.0.1"
clap = "3.2.12"
colog = "1.1.0"
failure = "0.1.8"
find_folder = "0.3.0"
glium_text = "0.13.0"
image = "0.24.3"
lazy_static = "1.4.0"
log = "0.4.17"
natord = "1.0.9"
quick-xml = "0.23.0"
serde = "1.0.139"
serde_cbor = "0.11.2"
serde_derive = "1.0.139"
serde_json = "1.0.82"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.7.3"

[features]
default = []

[lib]
name = "sokoban_backend"
