[package]
authors = ["Colin Benner <colin@yzhs.de>"]
name = "sokoban"
version = "0.5.1"
edition = "2018"

[[bin]]
doc = false
name = "sokoban"
test = false

[dependencies]
glium = "0.31.0"
ansi_term = "0.12.1"
directories = "4.0.1"
clap = "4.3.15"
colog = "1.1.0"
thiserror = "1.0.43"
find_folder = "0.3.0"
image = "0.24.3"
lazy_static = "1.4.0"
log = "0.4.17"
natord = "1.0.9"
quick-xml = "0.23.0"
serde = "1.0.171"
serde_cbor = "0.11.2"
serde_derive = "1.0.171"
serde_json = "1.0.103"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.7.3"

[features]
default = []

[lib]
name = "sokoban_backend"
